# llm-pick-and-place

./: .gitignore  LICENSE  README.en.md  README.ko.md  README.md  pyproject.toml  run_app.sh
docs/: INSTALL.md  architecture.md  dataflow.html  design.md  pick_algorithm.html
llm_manip/: __init__.py  contracts.py  factory.py  orchestrator.py  robots.py  scenes.py
llm_manip/env/: base.py  isaac_env.py  mock_env.py
llm_manip/executor/: base.py  ik_skill.py  mock_skills.py
llm_manip/perception/: base.py  oracle.py
llm_manip/planner/: base.py  llm.py  rule_based.py
scripts/: eval.py  generate_data.py  launcher.py  run.py  run_sim.py
tests/: test_contracts.py  test_isaac_integration.py  test_llm_planner.py  test_mock_loop.py  test_robots_scenes.py
