[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-pick-and-place"
version = "0.2.0"
description = "Modular language-conditioned robot manipulation pipeline (Isaac Sim, Franka Panda)"
requires-python = ">=3.11"
dependencies = ["numpy"]

[project.optional-dependencies]
isaac = [
    "isaacsim",
]
llm = [
    "openai>=1.0",
]
ui = [
    "PySide6>=6.5",
]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_manip*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "isaac_sim: marks tests that require a running Isaac Sim instance",
]
